# object_detection

./: CMakeLists.txt  Doxyfile  README.md
block_worlds/: .backup.swp  .pcl.cpp.swp  .vizblockworld.h.swp  CMakeLists.txt  main.cpp  tags  vizblockworld.cpp  vizblockworld.h
data_server/: CMakeLists.txt  colormap.h  main.cpp  server.h
detection/: .m_plot.h.swo  .m_util.cpp.swp  .m_util.h.swo  .m_util.h.swp  .main.cpp.swo  .main.cpp.swp  .pixelworld3d.h.swp  CMakeLists.txt  cluster_node.cpp  cluster_node.h  component.h  data.cpp  emd.cpp  emd.h  eye3d.cpp  eye3d.h  graph.cpp  graph.h  graph_draw.h  icp.h  icp.hpp  kinect.cpp  m_algorithm.cpp  m_algorithm.h  m_geometry.h  m_graph.h  m_opencv.cpp  m_opencv.h  m_util.cpp  main.cpp  nearnest_neighbor.h  note  pcl_visualizer.cpp  pcl_visualizer.h  pixel.cpp  pixel.h  pixelworld2d.h  pixelworld3d.h  plot_mds.py  rpc_server.py  (+15 more)
jmesh/: CMakeLists.txt  CMakeLists.txt~  Doxyfile
jmesh/doc/html/: annotated.html  classes.html  dir_000003_000002.html  dir_000004_000002.html  dir_000005_000002.html  dir_000006_000002.html  dir_0b40151d6286ce1268007f64dfcc7a56.html  dir_0b40151d6286ce1268007f64dfcc7a56_dep.map  dir_0b40151d6286ce1268007f64dfcc7a56_dep.md5  dir_2593f1e819b91ef8e430b32a7c440d13.html  dir_2593f1e819b91ef8e430b32a7c440d13_dep.map  dir_2593f1e819b91ef8e430b32a7c440d13_dep.md5  dir_3389daec362ec7cdc137494d895c63e1.html  dir_3389daec362ec7cdc137494d895c63e1_dep.map  dir_3389daec362ec7cdc137494d895c63e1_dep.md5  dir_5c2c7b5103c154eeea5d550b10bb7966.html  dir_5c2c7b5103c154eeea5d550b10bb7966_dep.map  dir_5c2c7b5103c154eeea5d550b10bb7966_dep.md5  dir_6f1dde4b005d555f55935321aebd1fc7.html  dir_6f1dde4b005d555f55935321aebd1fc7_dep.map  dir_6f1dde4b005d555f55935321aebd1fc7_dep.md5  dir_78c9a981124cc2c99ffc2c3376cedd6d.html  dir_78c9a981124cc2c99ffc2c3376cedd6d_dep.map  dir_78c9a981124cc2c99ffc2c3376cedd6d_dep.md5  dir_ccbe9848a5269263ffb727a661ec0530.html  dir_ccbe9848a5269263ffb727a661ec0530_dep.map  dir_ccbe9848a5269263ffb727a661ec0530_dep.md5  dirs.html  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6a.html  functions_0x6c.html  (+84 more)
jmesh/doc/html/d0/d04/: classclusterHeap.html  classclusterHeap_a24a734eb64c92aedc8047606dcb5db44_icgraph.map  classclusterHeap_a24a734eb64c92aedc8047606dcb5db44_icgraph.md5  classclusterHeap_a7f09568d9443616eb332e963c4db9c77_cgraph.map  classclusterHeap_a7f09568d9443616eb332e963c4db9c77_cgraph.md5  classclusterHeap_a941f6ea884f18a425fb63ee53c6b5bc1_cgraph.map  classclusterHeap_a941f6ea884f18a425fb63ee53c6b5bc1_cgraph.md5  classclusterHeap_a941f6ea884f18a425fb63ee53c6b5bc1_icgraph.map  classclusterHeap_a941f6ea884f18a425fb63ee53c6b5bc1_icgraph.md5  classclusterHeap_a9f781ef8b67a02ac8b7945f9ce48e7a4_cgraph.map  classclusterHeap_a9f781ef8b67a02ac8b7945f9ce48e7a4_cgraph.md5  classclusterHeap_a9f781ef8b67a02ac8b7945f9ce48e7a4_icgraph.map  classclusterHeap_a9f781ef8b67a02ac8b7945f9ce48e7a4_icgraph.md5  classclusterHeap_aafdaca6c38e8f601f946159509c17fbb_cgraph.map  classclusterHeap_aafdaca6c38e8f601f946159509c17fbb_cgraph.md5  classclusterHeap_aafdaca6c38e8f601f946159509c17fbb_icgraph.map  classclusterHeap_aafdaca6c38e8f601f946159509c17fbb_icgraph.md5  classclusterHeap_af1206b5f6fcc981422ee8b20d0893256_cgraph.map  classclusterHeap_af1206b5f6fcc981422ee8b20d0893256_cgraph.md5  classclusterHeap_af1206b5f6fcc981422ee8b20d0893256_icgraph.map  classclusterHeap_af1206b5f6fcc981422ee8b20d0893256_icgraph.md5
jmesh/doc/html/d0/d3f/: vertex_8cpp.html  vertex_8cpp_source.html
jmesh/doc/html/d0/d75/: checkAndRepair_8cpp__incl.map  checkAndRepair_8cpp__incl.md5
jmesh/doc/html/d0/dd4/: classdijkstraGraph__inherit__graph.map  classdijkstraGraph__inherit__graph.md5
jmesh/doc/html/d0/de8/: classJMesh-members.html
jmesh/doc/html/d0/deb/: list_8h__incl.md5
jmesh/doc/html/d1/d19/: classExtVertex__coll__graph.map  classExtVertex__coll__graph.md5
jmesh/doc/html/d1/d69/: j__mesh_8h__dep__incl.map  j__mesh_8h__dep__incl.md5
jmesh/doc/html/d1/d72/: classNode__coll__graph.md5  classabstractHeap__inherit__graph.map  classabstractHeap__inherit__graph.md5
jmesh/doc/html/d1/d8b/: classMatrix3x3-members.html
jmesh/doc/html/d1/d96/: classdijkstraNode-members.html
jmesh/doc/html/d1/dd2/: heap_8h__incl.md5
jmesh/doc/html/d1/dd5/: graph_8h__incl.map  graph_8h__incl.md5
jmesh/doc/html/d1/dd9/: list_8cpp.html  list_8cpp_source.html
jmesh/doc/html/d1/dda/: classEdge__coll__graph.map  classEdge__coll__graph.md5
jmesh/doc/html/d1/ddc/: classgraphEdge-members.html
jmesh/doc/html/d1/de6/: classclusterEdge__inherit__graph.map  classclusterEdge__inherit__graph.md5
jmesh/doc/html/d1/df4/: classclusterGraph__inherit__graph.map  classclusterGraph__inherit__graph.md5
jmesh/doc/html/d2/d0e/: classgraphNode__coll__graph.map  (+1 more)
jmesh/doc/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6a.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_79.html  all_7a.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_67.html  classes_6a.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_70.html  classes_73.html  classes_74.html  classes_76.html  defines_63.html  (+70 more)
jmesh/src/JMESH/: Makefile
jmesh/src/MESH_STRUCTURE/: Makefile  io.cpp
jmesh/src/PRIMITIVES/: Makefile  clusterGraph.cpp
mesh/: 3d_mds.py  CMakeLists.txt  Doxyfile  efpisoft.cpp  efpisoft.h  efpisoft_linux.pro  fittingPrimitives.cpp  fittingPrimitives.h  graph.h  moc_efpisoft.cpp
perceptor/: CMakeLists.txt  cloud_segment.cpp  kinect.cpp  remove_unmeshed_points.py
python/: 3d_mds.py  cmp_obj.py  egien.py  matrix_color.py  plot_circle.py  plot_server.py  plot_sever.py  solve.py
test/: CMakeLists.txt  main.cpp  test.cpp  test.h
(+1113 files in other folders)
