CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(object_detection)

add_definitions("-std=gnu++0x -g -w -Winline")
#set(CMAKE_CURRENT_BINARY_DIR "./bin")
SET(OPENCOG_LOCATION "/home/wondereamer/opencog")
SET(M_LIBRARY_LIB "${CMAKE_SOURCE_DIR}/bin/library")
SET(M_LIBRARY_HEADERS "${CMAKE_SOURCE_DIR}/library")
SET(LOCAL_LIB "/home/wondereamer/local/lib") 
SET(LOCAL_HEADERS "/home/wondereamer/local/include") 
#set(CMAKE_C_COMPILER   "/usr/bin/gcc-4.7")
#set( CMAKE_CXX_COMPILER "/usr/bin/g++-4.7")
#set(CMAKE_CXX_FLAGS                "-Wall -std=c++11 -Winline")
set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g")
set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")

add_definitions(-DDATA_SERVER_PORT=8000)
add_definitions(-DDETECTION_SERVER_PORT=8001)
add_definitions(-DDATADIR="${OPENCOG_LOCATION}/opencog")

if(debug_mode)
    add_definitions(-DDEBUG)
endif()
#if(CMAKE_COMPILER_IS_GNUCXX)
   #execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
   #if (GCC_VERSION VERSION_GREATER 4.7 OR GCC_VERSION VERSION_EQUAL 4.7)
        #message(STATUS "C++11 activated.")
        #add_definitions("-std=gnu++11 -g -Winline")
   #elseif(GCC_VERSION VERSION_GREATER 4.3 OR GCC_VERSION VERSION_EQUAL 4.3)
        #message(WARNING "C++0x activated. If you get any errors update to a compiler which fully supports C++11")
        #add_definitions("-std=gnu++0x -g -w -Winline")
        ##add_definitions("-std=gnu++11")
   #else ()
        #message(FATAL_ERROR "C++11 needed. Therefore a gcc compiler with a version higher than 4.3 is needed.")   
   #endif()
#else(CMAKE_COMPILER_IS_GNUCXX)
   #add_definitions("-std=c++0x") 
#endif(CMAKE_COMPILER_IS_GNUCXX)
ADD_SUBDIRECTORY(library)
ADD_SUBDIRECTORY(detection)
ADD_SUBDIRECTORY(block_worlds)
ADD_SUBDIRECTORY(data_server)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(bin)
